force-app/main/default/objects/XactlyExpress__XCPlan__c/fields/XactlyExpress__EndDate__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__EndDate__c</fullName>
    <label>EndDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>