force-app/main/default/objects/XactlyExpress__XCPlan__c/fields/XactlyExpress__StartDate__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__StartDate__c</fullName>
    <label>StartDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>