force-app/main/default/objects/XactlyExpress__XCPlan__c/fields/XactlyExpress__TIC__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__TIC__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TIC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>