force-app/main/default/objects/XactlyExpress__XCPlan__c/fields/XactlyExpress__XCDeleted__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__XCDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>