force-app/main/default/objects/XactlyExpress__XCPlan__c/listViews/XactlyExpress__All.listView-meta.xml
<ListView>
    <fullName>XactlyExpress__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>